--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,18 @@
-server:
-  port:9551
+spring:
+   profiles: dev  #开发环境
+   application:
+    name: woniucloud-provider-dev
+    
+---
+
+spring:
+   profiles: test  #测试环境
+   application:
+    name: woniucloud-provider-test
+    
+---
+
+spring:
+   profiles: pro  #生产环境
+   application:
+    name: woniucloud-provider-pro 
